k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: isrealdev/worker:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        # We use an 'exec' probe because the worker has no web server
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - ps aux | grep python
          initialDelaySeconds: 20
          periodSeconds: 20
